      than a count of copied revisions and failed revisions. A while back
      we stopped ever reporting failed revisions because we started
      erroring instead, and the copied revisions count is not used in the
      UI at all - indeed it only reflects the repository status not
      changes to the branch itself. (Robert Collins)

    * The ``_fetch_*`` attributes on ``Repository`` are now on
      ``RepositoryFormat``, more accurately reflecting their intent (they
      describe a disk format capability, not state of a particular
      repository of that format). (Robert Collins)

  INTERNALS:

    * Branch and Repository creation on a bzr+ssh://server are now done
      via RPC calls rather than VFS calls, reducing round trips for
      pushing new branches substantially. (Robert Collins)

    * ``Branch.clone`` now takes the ``repository_policy`` formerly used
      inside ``BzrDir.clone_on_transport``, allowing stacking to be
      configured before the branch tags and revision tip are set. This
      fixes a race condition cloning stacked branches that would cause
      plugins to have hooks called on non-stacked instances.
      (Robert Collins, #334187)

    * ``BzrDirFormat.__str__`` now uses the human readable description
      rather than the sometimes-absent disk label. (Robert Collins)

    * ``bzrlib.fetch`` is now composed of a sender and a sink component
      allowing for decoupling over a network connection. Fetching from
      or into a RemoteRepository with a 1.13 server will use this to
      stream the operation.
      (Andrew Bennetts, Robert Collins)

    * ``bzrlib.tests.run_suite`` accepts a runner_class parameter
      supporting the use of different runners. (Robert Collins)

    * New branch method ``create_clone_on_transport`` that returns a
      branch object. (Robert Collins)

    * New hook Commands['extend_command'] to allow plugins to access a
      command object before the command is run (or help generated from